--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="./assets/images/favi.png" />
+    <link rel="icon" href="%PUBLIC_URL%/assets/images/favi.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -30,7 +30,7 @@
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="./assets/stylesheets/style.css" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/stylesheets/style.css" />
     <title>Community Connect</title>
   </head>
   <body>
